consul/consul-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: consul 
  labels:
    app: consul 
  name: consul-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: consul.domain.com 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: consul-server
            port:
              number: 8500
